# qpn_analysis

./: .pre-commit-config.yaml  README.md  pyproject.toml  utlis.py
CT/notebooks/: FS_stats.ipynb  FS_surf.ipynb  enigma_toolbox.ipynb  lm_aseg.py
FC/: analyze_FC.py  functional_connectivity.ipynb
MRIQC/: QC_stats.ipynb  mriqc_plot.py
NM/: NM_stats.ipynb
clinical_assessment/: neuropsy_instruments.csv  pheno_analysis.ipynb
diffusion/: structural_connectivity.ipynb
idp/MRIQC/: group_T1w.html  group_bold.html
idp/cerebellum/: maget_stats.ipynb
idp/diffusion/: structural_connectivity.ipynb
idp/freesurfer/: FS_stats.ipynb
idp/func_conn/: analyze_FC.py  functional_connectivity.ipynb  generate_FC.py
idp/mriqc/: QC_stats.ipynb
pipeline/: Dockerfile  build-tractoflow-container.sh  run_tractoflow.py
pipeline/tractoflow-2.4.2/: descriptor.json  invocation.json  tracker_config.json
tabular/: legacy_updrs_transformation.py  pheno_analysis.ipynb
