[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nipoppy"
authors = [{ name = "nikhil153" }]
version = "0.1.0"

dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
    "nibabel",
    "pathlib",
    "json",
    "statsmodels",
    "enigmatoolbox",
    "ptitprince"
]

[tool.codespell]
skip = '.git,.github,*.pdf,*.svg,pyproject.toml,*.ipynb,*.html'

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov nipoppy"
testpaths = ["tests/"]
norecursedirs = ["tests/data"]

[tool.black]
line-length = 88

[tool.isort]
combine_as_imports = true
line_length = 88
profile = "black"
skip_gitignore = true
